# aaplsucks

./: .gitignore  CLAUDE.md  Cargo.toml  ENGINE_ROADMAP.md  HANDOFF.md  README.md  ROADMAP.md  dungeon.scene.ron
apps/dwnldr-gui/: Cargo.toml
apps/dwnldr-gui/src/: app.rs  dispatch.rs  layout.rs  main.rs  render.rs  state.rs  tools.rs
assets/enemies/: Frog.glb  Rat.glb  Snake.glb  Snake_angry.glb  Spider.glb  Wasp.glb
assets/knight/: Club.glb  Helmet1.glb  Helmet2.glb  Helmet3.glb  Katana.glb  KnightCharacter.glb  ShortSword.glb  ShoulderPads.glb  Sword.glb
crates/esox_engine/: Cargo.toml
crates/esox_engine/src/: animation_graph.rs  camera.rs  chunk.rs  chunk_serde.rs  debug_overlay.rs  engine.rs  game.rs  ground_overlay.rs  ground_plane.rs  lib.rs  picking.rs  placement.rs  scene.rs  time.rs
crates/esox_engine/src/assets/: loader.rs  mod.rs  registry.rs  watcher.rs
crates/esox_engine/src/audio/: mod.rs  spatial.rs
crates/esox_engine/src/ecs/: components.rs  hierarchy.rs  lod.rs  mod.rs  particle_components.rs  physics_components.rs  physics_sync.rs  systems.rs
crates/esox_engine/src/input/: action.rs  axis.rs  gamepad.rs  mod.rs
crates/esox_engine/src/physics/: entity_map.rs  mod.rs  rapier.rs
crates/esox_font/: Cargo.toml
crates/esox_font/examples/: visual_demo.rs
crates/esox_font/src/: cache.rs  lib.rs  lookup.rs  rasterizer.rs  shaper.rs
crates/esox_gfx/: Cargo.toml
crates/esox_gfx/shaders/: composite.wgsl  fs_lit.wgsl  fs_pbr.wgsl  motion_blur.wgsl  preamble.wgsl  ssao.wgsl  ssao_blur.wgsl  velocity.wgsl
crates/esox_gfx/src/: atlas.rs  bloom.rs  damage.rs  frame.rs  lib.rs  pipeline.rs  primitive.rs  scene.rs
crates/esox_gfx/src/mesh3d/: bounds.rs  camera.rs  gltf_loader.rs  ibl.rs  light.rs  lod.rs  material.rs  mesh.rs  mod.rs  motion_blur.rs  particles.rs  postprocess.rs  renderer.rs  sdf_pass.rs  shader_library.rs  shadow.rs  skeleton.rs  skinning.rs  ssao.rs
crates/esox_platform/: Cargo.toml
crates/esox_platform/src/: atspi.rs  config.rs  lib.rs  perf.rs
crates/esox_ui/: Cargo.toml
crates/esox_ui/src/: id.rs  layout.rs  lib.rs  paint.rs  response.rs  rich_text.rs  state.rs  text.rs  theme.rs
crates/esox_ui/src/widgets/: badge.rs  button.rs  checkbox.rs  chip.rs  collapsing.rs  combobox.rs  container.rs  drop_zone.rs  empty_state.rs  hyperlink.rs  image.rs  label.rs  menu_bar.rs  mod.rs  modal.rs  number_input.rs  paragraph.rs  progress_bar.rs  radio.rs  scrollable.rs  select.rs  separator.rs  slider.rs  split_pane.rs  table.rs  tabs.rs  text_area.rs  text_input.rs  toast.rs  toggle.rs  tree.rs  virtual_scroll.rs
examples/bench3d/: Cargo.toml
examples/bench3d/src/: main.rs
examples/combat_demo/: Cargo.toml
examples/combat_demo/src/: main.rs
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
examples/demo3d/: Cargo.toml
examples/demo3d/assets/: gen_sample.py  sample.glb
examples/demo3d/src/: main.rs
examples/dungeon/: Cargo.toml
examples/dungeon/src/: main.rs
examples/dungeon_explorer/: Cargo.toml  dungeon_explorer.scene.ron
examples/dungeon_explorer/assets/dungeon/: README.md
examples/dungeon_explorer/src/: main.rs
examples/editor/: Cargo.toml
examples/editor/src/: hierarchy.rs  inspector.rs  main.rs  picking.rs  undo.rs
examples/engine_demo/: Cargo.toml
examples/engine_demo/src/: main.rs
examples/factory/: Cargo.toml
examples/factory/assets/: items.ron  recipes.ron
examples/factory/src/: belt.rs  fluid.rs  hud.rs  inserter.rs  inventory.rs  main.rs  mining.rs  power.rs  recipe.rs
examples/glb_viewer/: Cargo.toml
examples/glb_viewer/src/: main.rs
examples/layout_showcase/: Cargo.toml
examples/layout_showcase/src/: main.rs
examples/moba_lane/: Cargo.toml
examples/moba_lane/src/: main.rs
examples/platformer/: Cargo.toml
examples/platformer/src/: main.rs
examples/pokemon/: Cargo.toml  HANDOFF.md
examples/pokemon/assets/models/001/glTF/: model.glb
examples/pokemon/src/: main.rs
examples/pokemon_viewer/: Cargo.toml
examples/pokemon_viewer/src/: main.rs
examples/shadow_test/: Cargo.toml
examples/shadow_test/src/: main.rs
examples/vpk_viewer/: Cargo.toml  README.md
examples/vpk_viewer/src/: main.rs
scripts/: fbx_to_glb.py  fix_glb_uvs.py  flip_glb_uvs.py
