[package]
name = "dwnldr-gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dwnldr-gui"
path = "src/main.rs"

[dependencies]
# Toolkit crates (local)
esox_gfx      = { path = "../../crates/esox_gfx" }
esox_font     = { path = "../../crates/esox_font" }
esox_ui       = { path = "../../crates/esox_ui" }
esox_platform = { path = "../../crates/esox_platform" }

# dwnldr library (external workspace)
dwnldr = { path = "/home/esoc/code/dwnldr" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# File dialogs
rfd = "0.15"

# Clipboard
arboard = { version = "3", features = ["wayland-data-control"] }

# Serialization (window state persistence)
serde = { version = "1", features = ["derive"] }
toml  = "0.8"

# Utilities
dirs   = "6"
open   = "5"
image  = { version = "0.25", default-features = false, features = ["png"] }
winit  = { version = "0.30", default-features = false, features = ["rwh_06", "x11", "wayland", "wayland-dlopen"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
