[package]
name = "esox_engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
audio = ["dep:kira", "dep:mint"]
gamepad = ["dep:gilrs"]
hot-reload = ["dep:notify", "esox_gfx/hot-reload"]
rapier = ["dep:rapier3d"]
serialization = ["dep:serde", "dep:ron", "glam/serde", "esox_gfx/serde"]
ui = ["dep:esox_ui", "dep:esox_font"]

[dependencies]
esox_gfx = { workspace = true, features = ["mesh3d"] }
esox_platform = { workspace = true }
wgpu = { workspace = true }
esox_input = { workspace = true }
hecs = "0.10"
glam = "0.29"
tracing = { workspace = true }

# Optional
kira = { version = "0.12", optional = true, default-features = false, features = ["cpal", "ogg", "vorbis"] }
mint = { version = "0.5", optional = true }
gilrs = { version = "0.11", optional = true }
notify = { version = "7", optional = true }
serde = { workspace = true, optional = true }
ron = { workspace = true, optional = true }
rapier3d = { workspace = true, optional = true }
esox_ui = { workspace = true, optional = true }
esox_font = { workspace = true, optional = true }

[dev-dependencies]
serde_json = "1"
