[package]
name = "esox_gfx"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU rendering engine with arena scene graph and instanced quad pipeline"

[features]
default = []
mesh3d = ["dep:glam", "dep:image", "dep:gltf"]

[dependencies]
bytemuck = { workspace = true }
glam = { version = "0.29", optional = true }
gltf = { workspace = true, optional = true }
image = { workspace = true, optional = true }
naga = { workspace = true }
raw-window-handle = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
