[package]
name = "esox_platform"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Platform integration: windowing, GPU surface, clipboard, and sandboxing"

[dependencies]
arboard = { workspace = true }
esox_gfx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
pollster = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
seccompiler = { version = "0.4", optional = true }
landlock = { version = "0.4", optional = true }

[features]
default = []
sandbox = ["seccompiler", "landlock"]
